Bug 1007897 - Release mSurface reference earlier to reduce copies and peak memory. r=mattwoodrow